--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d8923b7265.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <section class="score"></section>
 
     <section class="buttons">
-        <button class="rock">Rock</button>
-        <button class="paper">Paper</button>
-        <button class="scissors">Scissors</button>
+        <button class="rock"><i class="far fa-hand-rock fa-10x"></i></button>
+        <button class="paper"><i class="far fa-hand-paper fa-10x"></i></button>
+        <button class="scissors"><i class="far fa-hand-scissors fa-10x"></i></button>
     </section>
 
     <script src="script.js"></script>
