Add IDs to buttons

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section class="score"></section>
 
     <section class="buttons">
-        <button class="rock"><i class="far fa-hand-rock fa-10x"></i></button>
-        <button class="paper"><i class="far fa-hand-paper fa-10x"></i></button>
-        <button class="scissors"><i class="far fa-hand-scissors fa-10x"></i></button>
+        <button class="rock" id="rock"><i class="far fa-hand-rock fa-10x"></i></button>
+        <button class="paper" id="paper"><i class="far fa-hand-paper fa-10x"></i></button>
+        <button class="scissors" id="scissors"><i class="far fa-hand-scissors fa-10x"></i></button>
     </section>
 
     <script src="script.js"></script>
